# citra

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt
src/audio_core/hle/: pipe.cpp  source.cpp
src/citra/: citra.cpp  citra.rc  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  citra-qt.rc  config.cpp  config.h  configure_dialog.cpp  configure_general.cpp  configure_input.cpp  configure_input.h  configure_input.ui  configure_input_widget.cpp  configure_input_widget.h  configure_system.cpp  configure_system.h  configure_system.ui  main.cpp  main.h  main.ui  stereoscopic_controller.h
src/citra_qt/camera/: still_image_camera.cpp  still_image_camera.h
src/citra_qt/cheat/: cheat_gui.cpp  cheat_gui.h
src/common/: CMakeLists.txt  emu_window.cpp  emu_window.h  motion_emu.cpp  motion_emu.h  param_package.cpp  param_package.h  string_util.cpp  string_util.h  thread.h
src/common/camera/: blank_camera.cpp  blank_camera.h  factory.cpp  factory.h  interface.h  v4l2_camera.cpp  v4l2_camera.h
src/common/logging/: backend.cpp  log.h
src/core/: CMakeLists.txt  core.cpp  memory.cpp  memory.h  settings.cpp  settings.h
src/core/arm/: arm_interface.h
src/core/arm/dynarmic/: arm_dynarmic.cpp
src/core/arm/dyncom/: arm_dyncom.cpp
src/core/cheat/: cheat_core.cpp
src/core/file_sys/: archive_other_savedata.cpp  archive_other_savedata.h  archive_savedata.h  archive_selfncch.cpp  archive_selfncch.h  archive_source_sd_savedata.cpp  archive_source_sd_savedata.h  ivfc_archive.cpp  ivfc_archive.h  ncch_container.cpp  ncch_container.h
src/core/frontend/: emu_window.cpp  emu_window.h  input.h
src/core/frontend/camera/: blank_camera.cpp  blank_camera.h  camera.cpp  camera.h  factory.cpp  interface.h
src/core/hle/: result.h
src/core/hle/kernel/: function_wrappers.h  kernel.cpp  kernel.h  memory.cpp  process.cpp  process.h  svc.cpp
src/core/hle/service/: ldr_ro.cpp
src/core/hle/service/act/: act.cpp  act.h  act_a.cpp  act_u.cpp
src/core/hle/service/apt/: applet_manager.cpp  apt.cpp  apt.h
src/core/hle/service/cam/: cam.cpp  cam.h
src/core/hle/service/cecd/: cecd.cpp  cecd_u.h
src/core/hle/service/cfg/: cfg.cpp  cfg.h  cfg_i.cpp  cfg_s.cpp  cfg_u.cpp
src/core/hle/service/fs/: archive.cpp  fs_user.cpp
src/core/hle/service/hid/: hid.cpp  hid.h
src/core/hle/service/ir/: crc8.cpp  crc8.h  extra_hid.cpp  extra_hid.h  ir.cpp  ir_rst.cpp  ir_rst.h  ir_user.cpp  ir_user.h  other_3ds.cpp  other_3ds.h
src/core/hle/service/ldr_ro/: cro_helper.cpp  hash_list.cpp  hash_list.h  ldr_ro.cpp
src/core/hle/service/nwm/: uds_data.cpp
src/core/hw/aes/: aes.h  ccm.cpp  ccm.h  key.cpp  key.h
src/core/loader/: 3dsx.cpp  loader.h  ncch.cpp  ncch.h
src/input_common/: 3dscontroller.cpp  3dscontroller.h  CMakeLists.txt  analog_from_button.cpp  analog_from_button.h  keyboard.cpp  keyboard.h  main.cpp  main.h  monolithic_device.cpp  monolithic_device.h  motion_emu.cpp  motion_emu.h  sdl.cpp  sdl.h
src/input_common/sdl/: listener.cpp
src/svc_wrapper_test/: CMakeLists.txt  wrap.cpp
src/tests/: CMakeLists.txt  sample.cpp
src/updater/: updater.cpp
src/video_core/: command_processor.cpp  pica_state.h  regs_framebuffer.h  regs_lighting.h  regs_texturing.h  video_core.cpp  video_core.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_manager.cpp  gl_shader_manager.h  gl_state.cpp  gl_state.h  renderer_opengl.cpp  renderer_opengl.h
src/video_core/shader/: shader.cpp  shader.h  shader_interpreter.cpp  shader_jit_x64_compiler.cpp  shader_jit_x64_compiler.h
src/video_core/swrasterizer/: proctex.cpp  proctex.h  rasterizer.cpp
